<resources>
    <string name="app_name">SHARE IT!</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">SHARE IT!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="has_olvidado_tu_contrasena">¿Has olvidado tu contraseña?</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="UserName">Nombre</string>
    <string name="UserLastName">Apellidos</string>
    <string name="Nick_de_Usuario">Nick de Usuario</string>
    <string name="UserEmail">Correo Electronico</string>
    <string name="Password">Contraseña</string>
    <string name="PasswordRepeated">Confirmar Contraseña</string>
    <string name="NewAccount">Nueva Cuenta</string>
    <string name="btnCrear">Sin cuenta aún?</string>
    <string name="Buscar">Post</string>
    <string name="Compatir">Compartir al Mundo</string>
    <string name="shareIt">SHARE IT!</string>
    <string name="navHeaderComparte">Comparte tu mundo</string>
    <string name="acercade">Acerca de..</string>

    <string name="precio">Precio</string>
    <string name="palabraCLave">Buscar...</string>
    <string name="txtValoracion">Valoración</string>
    <string name="txtProducto">Tipo de Producto</string>

    <string-array name="productos">
        <item>Selecciona Uno</item>
        <item>Calzado</item>
        <item>Comidas</item>
        <item>Tecnologia</item>
        <item>Computadores</item>
        <item>Electrodomesticos</item>
        <item>Telefonos</item>
        <item>Accesorios y belleza</item>
    </string-array>
    <string-array name="buscarProductos">
        <item>Ninguno</item>
        <item>Calzado</item>
        <item>Comidas</item>
        <item>Tecnologia</item>
        <item>Computadores</item>
        <item>Electrodomesticos</item>
        <item>Telefonos</item>
        <item>Accesorios y belleza</item>
    </string-array>
    <string name="descripcion">Descripcion</string>
    <string name="direccion">direccion</string>
    <string name="compartir">Compartir</string>
    <string name="productpicture">productPicture</string>
    <string name="tipo_de_producto">Tipo de producto:</string>
    <string name="calificacion">Calificacion</string>
    <string name="TxtBusqueda">Buscar</string>

    <string name="info">Ingenieria de Sistemas\n\nComputación Movil\n\n\nJaime Jiménez Serrano\n
    Brayan Barrientos\n\n2016</string>
    <string name="menu">Menu</string>
    <string name="correoE">Correo Electronico</string>
    <string name="btnLogin">Iniciar sesión</string>
    <string name="fault_login">Contraseña Invalida</string>
    <string name="fault_login_invalid_email_format">Formato de correo invalido</string>
    <string name="fault_login_invalid_User">Usuario Inexistente</string>
    <string name="success_loggin">Bienvenido</string>
    <string name="required_camps">Estos Campos son Requeridos</string>
    <string name="requerid_camp">Campo requerido</string>
    <string name="Short_password">Clave muy corta</string>
    <string name="without_conection">No hay conexión con el servidor</string>
    <string name="OAUTH2_0">87082046210-4jaei96i29i2jhe5b4a7c2qnkbaa4aad.apps.googleusercontent.com</string>
    <string name="Perfil">Mi Perfil</string>
    <string name="cerrar">Cerrar sesión</string>
    <string name="mensaje_cerrar_sesion">¿Seguro que deseas cerrar sesión?</string>
    <string name="respuestaPositiva">Si</string>
    <string name="respuestaNegativa">No</string>

    <string name="description">Description</string>
    <string name="imagen_de_producto">Imagen de producto</string>
    <string name="publicado_por">publicado por</string>
    <string name="productname">productName</string>
    <string name="username">userName</string>
    <string name="noCoinciden">Las contraseñas no coinciden</string>
    <string name="repNoCoincide">No coincide</string>
    <string name="longitudMinima">Logitud minama 8 caracteres</string>
    <string name="AlreadyRegister">Usuario ya registrado</string>
    <string name="SuccessCreation">Usuario creado con Exito!</string>

    <string name="nombre_del_producto">nombre del producto</string>


    <string name="tituloRecursosImagen">Obtener Imagen</string>
    <string-array name="recursosImage">
        <item>Camara</item>
        <item>Galeria</item>
    </string-array>
    <string name="mensajeseleccionRecurso">Selecciona la fuente</string>

    <string name="nombre_producto">Nombre del producto</string>
    <string name="nombre_del_usuario">Nombre del usuario</string>
    <string name="precio_del_producto">Precio del producto</string>
    <string name="publicadoPor">Publicado por</string>
    <string name="descripcion_del_producto">descripcion del producto</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="buscar_por_nombre_de_producto">Buscar por nombre de producto</string>
    <string name="busqueda">Buscar</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_cambiarContraseña">Cambiar Contraseña</string>
    <string name="dia_actual_contraseña">Actual Contraseña</string>
    <string name="dia_nueva_contraseña">Nueva Contraseña</string>
    <string name="dia_nueva_contraeña_repetida">Confirmar Contraseña</string>
    <string name="hint_contraseña">**************</string>
    <string name="dia_title">Cambiar Contraseña</string>
    <string name="dia_btn_aceptar">Aceptar</string>
    <string name="dia_btn_cancelar">Cancelar</string>
    <string name="dia_message_incorrectaActual">Contraseña Actual Erronea</string>
    <string name="dig_message_shortPass">Contraseña muy corta</string>
    <string name="dig_message_nocoinciden">Las contraseñas no Coinciden</string>
    <string name="dia_message_campo_requerido">Campo Requerido</string>
    <string name="dia_message_campos_requ">Campos requeridos</string>
    <string name="dia_message_success">Cambio de Contraseña Exitoso</string>
    <string name="dia_message_shortLength">Logitud Minima 8</string>
    <string name="ver_comentarios">Ver comentarios</string>
    <string name="ver_localizacion">Ver Localizacion</string>
    <string name="title_activity_comentarios">Comentarios</string>
    <string name="message_product_type">Selecciona un un tipo de producto</string>
    <string name="fecha">DD/MM/AAAA</string>
    <string name="Comentario">Tu comentario</string>
    <string name="message_localizacion_add">Su ubicación ha sido capturada</string>
    <string name="message_no_location">No se pudo capturar su ubiciación</string>
    <string name="tu_comentario">Escribe tu comentario...</string>
    <string name="settings">Configuración</string>
    <string name="permission_location">Requiere dar acceso a geolocalización</string>
    <string name="permisssion_external_storage">Se requiere el permiso de almacenamiento</string>
    <string name="action_search">Search</string>
    <string name="busqueda_avanzada">Busqueda avanzada</string>
    <string name="messege_new_product">Producto Creado Con Exito</string>
    <string name="message_photo_required">La foto es requerida</string>
    <string name="messege_product_name_required">El nombre del producto es requerido</string>
    <string name="message_score_required">La calificacion es requerida</string>
    <string name="message_price_required">El precio del producto es requerida</string>
    <string name="message_description_required">Tu opinion personal es requerida</string>
    <string name="messege_wait">Por favor espere.</string>
    <string name="message_buscando_direccion">Buscando la dirección</string>
    <string name="message_cargando">Cargando..</string>
    <string name="message_location_reach">Estas en la localización buscada</string>
    <string name="distancia">Distancia</string>
    <string name="duracion">Duracion</string>

</resources>
