<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.udea.compumovil.gr06.shareit.UI.NewAccounts">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/Imagen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="32dp"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/crear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Imagen"
            android:layout_marginBottom="30dp"
            android:textSize="40sp"
            android:layout_centerHorizontal="true"
            android:text="@string/NewAccount"/>

        <EditText
            android:id="@+id/Nick"
            android:layout_width="380sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/crear"
            android:layout_marginBottom="12dp"
            android:singleLine="true"
            android:hint="@string/Nick_de_Usuario"/>

        <EditText
            android:id="@+id/nombreUsuario"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/Nick"
            android:layout_marginBottom="12dp"
            android:singleLine="true"
            android:hint="@string/UserName"/>

        <EditText
            android:id="@+id/ApellidosUsuario"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/Nick"
            android:layout_toRightOf="@id/nombreUsuario"
            android:layout_marginBottom="12dp"
            android:singleLine="true"
            android:hint="@string/UserLastName"/>

        <EditText
            android:id="@+id/Correo"
            android:layout_width="380sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/ApellidosUsuario"
            android:layout_marginBottom="12dp"
            android:singleLine="true"
            android:hint="@string/UserEmail"/>

        <EditText
            android:id="@+id/Contraseña"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/Correo"
            android:layout_marginBottom="12dp"
            android:singleLine="true"
            android:hint="@string/Passwaord"/>

        <EditText
            android:id="@+id/ContraseñaRepetida"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/Contraseña"
            android:layout_below="@id/Correo"
            android:layout_marginBottom="12dp"
            android:singleLine="true"
            android:hint="@string/PasswaordRepeated"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:layout_marginTop="34dp"
            android:layout_below="@id/ContraseñaRepetida"
            android:layout_centerHorizontal="true"
            android:text="@string/btnCrear"/>

    </RelativeLayout>
</ScrollView>

</RelativeLayout>
