<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Busqueda avanzada"
        android:textSize="30sp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:theme="@android:style/Theme.NoTitleBar"
        android:padding="22dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/precio"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10sp"
            android:gravity="center">

           <EditText
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1.5"
               android:id="@+id/min"
               android:inputType="number"
               android:hint="@string/min"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:id="@+id/max"
                android:inputType="number"
                android:hint="@string/max"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="24dp"
            android:background="#C8C9CB" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="30dp"
                android:text="@string/tipo_de_producto" />

            <Spinner
                android:id="@+id/searchType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/buscarProductos"
                style="@android:style/Widget.Holo.Spinner"
                />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="24dp"
            android:background="#C8C9CB" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:text="@string/txtValoracion" />

            <RatingBar
                android:id="@+id/searchRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
