<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/add_comentario_container"
    android:padding="12dp">

    <RatingBar
        android:id="@+id/score_comentario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="0.65"
        android:scaleY="0.65" />

    <EditText
        android:id="@+id/comentario_del_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="4"
        android:maxLines="8"
        android:maxLength="255"
        android:inputType="textMultiLine"
        android:gravity="start"
        android:layout_marginBottom="14dp"
        android:hint="@string/tu_comentario" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelar_comentario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.Button.Inverse"

            android:layout_marginEnd="10dp"
            android:layout_weight="2"
            android:text="@string/dia_btn_cancelar" />

        <Button
            android:id="@+id/aceptar_comentario"
            android:layout_width="wrap_content"
            android:background="@color/colorPrimary"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.Button.Inverse"
            android:layout_marginStart="10dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/dia_btn_aceptar" />


    </LinearLayout>


</LinearLayout>