<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_share_it"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.udea.compumovil.gr06.shareit.UI.LoginShareIt">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/icono_shareit" />
    <EditText
        android:id="@+id/correo_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:maxLength="40"
        android:layout_marginBottom="8dp"
        android:hint="@string/correoE" />

    <EditText
        android:id="@+id/clave_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:imeOptions="actionDone"
        android:layout_below="@id/correo_login"
        android:hint="@string/Password"
        android:maxLength="20"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        style="@style/Base.TextAppearance.AppCompat.Button"
        android:background="@color/colorPrimary"
        android:textColor="#FFF"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:onClick="onClick"
        android:layout_below="@id/clave_login"
        android:layout_centerInParent="true"
        android:text="@string/btnLogin" />

    <!--TextView
        android:id="@+id/passRecovery_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_below="@id/btn_login"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/has_olvidado_tu_contrasena"
        android:textColor="#2d38d6" />-->

    <TextView
        android:id="@+id/newCuenta_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:text="@string/crear_cuenta"
        android:textSize="16sp"
        android:textColor="#2d38d6"
        android:onClick="newAccounts"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_google_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:onClick="onClick"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
